[haiyang] add order resources

--- a/melt-sample/src/main/resources/assets/css/custom.css
+++ b/melt-sample/src/main/resources/assets/css/custom.css
@@ -76,11 +76,8 @@ body {
     color: #7c756c;
     font-size: 19px;
 }
-
-form {
-    width: 240px;
-}
 form label {
-    padding-right: 75px;
+    width: 100px;
+    display: inline-block;
 }
 
